objects/ffct__ClearDataState__c.object
<CustomObject>
    <description>Lists the objects processed and status of the clear data process, including the user who ran it.</description>
    <fields>
        <fullName>ffct__DeletionOption__c</fullName>
        <label>Deletion Option</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__ErroredObjects__c</fullName>
        <label>Errored Objects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffct__Inputs__c</fullName>
        <label>Inputs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffct__ProcessedObjectsInfoJSON__c</fullName>
        <label>Processed Objects Info JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffct__Product__c</fullName>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffct__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ClearDataStates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Clear Data State</label>
    <listViews>
        <fullName>ffct__All</fullName>
        <columns>NAME</columns>
        <columns>ffct__Product__c</columns>
        <columns>ffct__DeletionOption__c</columns>
        <columns>ffct__Inputs__c</columns>
        <columns>ffct__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CDS-{0000}</displayFormat>
        <label>Clear Data State Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClearDataStates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>